Tools/Convert_GL.h_and_GLext.h_C-Include/oglGLext.h

typedef khronos_ssize_t GLsizeiptr;
typedef khronos_intptr_t GLintptr;
typedef char GLchar;
 void  glVertexAttribI3uiv (GLuint index,GLuint *v);
 void  glVertexAttribI4uiv (GLuint index,GLuint *v);
 void  glVertexAttribI4bv (GLuint index,GLbyte *v);
 void  glVertexAttribI4sv (GLuint index,GLshort *v);
 void  glVertexAttribI4ubv (GLuint index,GLubyte *v);
 void  glVertexAttribI4usv (GLuint index,GLushort *v);
 void  glGetUniformuiv (GLuint program_, GLint location, GLuint *params);
 void  glBindFragDataLocation (GLuint program_, GLuint color,GLchar *name);
 GLint  glGetFragDataLocation (GLuint program_,GLchar *name);
 void  glUniform1ui (GLint location, GLuint v0);
 void  glUniform2ui (GLint location, GLuint v0, GLuint v1);
 void  glUniform3ui (GLint location, GLuint v0, GLuint v1, GLuint v2);
 void  glUniform4ui (GLint location, GLuint v0, GLuint v1, GLuint v2, GLuint v3);
 void  glUniform1uiv (GLint location, GLsizei count,GLuint *value);
 void  glUniform2uiv (GLint location, GLsizei count,GLuint *value);
 void  glUniform3uiv (GLint location, GLsizei count,GLuint *value);
 void  glUniform4uiv (GLint location, GLsizei count,GLuint *value);
 void  glTexParameterIiv (GLenum target, GLenum pname,GLint *params);
 void  glTexParameterIuiv (GLenum target, GLenum pname,GLuint *params);
 void  glGetTexParameterIiv (GLenum target, GLenum pname, GLint *params);
 void  glGetTexParameterIuiv (GLenum target, GLenum pname, GLuint *params);
 void  glClearBufferiv (GLenum buffer, GLint drawbuffer,GLint *value);
 void  glClearBufferuiv (GLenum buffer, GLint drawbuffer,GLuint *value);
 void  glClearBufferfv (GLenum buffer, GLint drawbuffer,GLfloat *value);
 void  glClearBufferfi (GLenum buffer, GLint drawbuffer, GLfloat depth, GLint stencil);
GLubyte * glGetStringi (GLenum name, GLuint index);
 GLboolean  glIsRenderbuffer (GLuint renderbuffer);
 void  glBindRenderbuffer (GLenum target, GLuint renderbuffer);
 void  glDeleteRenderbuffers (GLsizei n,GLuint *renderbuffers);
 void  glGenRenderbuffers (GLsizei n, GLuint *renderbuffers);
 void  glRenderbufferStorage (GLenum target, GLenum internalformat, GLsizei width, GLsizei height);
 void  glGetRenderbufferParameteriv (GLenum target, GLenum pname, GLint *params);
 GLboolean  glIsFramebuffer (GLuint framebuffer);
 void  glBindFramebuffer (GLenum target, GLuint framebuffer);
 void  glDeleteFramebuffers (GLsizei n,GLuint *framebuffers);
 void  glGenFramebuffers (GLsizei n, GLuint *framebuffers);
 GLenum  glCheckFramebufferStatus (GLenum target);
 void  glFramebufferTexture1D (GLenum target, GLenum attachment, GLenum textarget, GLuint texture, GLint level);
 void  glFramebufferTexture2D (GLenum target, GLenum attachment, GLenum textarget, GLuint texture, GLint level);
 void  glFramebufferTexture3D (GLenum target, GLenum attachment, GLenum textarget, GLuint texture, GLint level, GLint zoffset);
 void  glFramebufferRenderbuffer (GLenum target, GLenum attachment, GLenum renderbuffertarget, GLuint renderbuffer);
 void  glGetFramebufferAttachmentParameteriv (GLenum target, GLenum attachment, GLenum pname, GLint *params);
 void  glGenerateMipmap (GLenum target);
 void  glBlitFramebuffer (GLint srcX0, GLint srcY0, GLint srcX1, GLint srcY1, GLint dstX0, GLint dstY0, GLint dstX1, GLint dstY1, GLbitfield mask, GLenum filter);
 void  glRenderbufferStorageMultisample (GLenum target, GLsizei samples, GLenum internalformat, GLsizei width, GLsizei height);
 void  glFramebufferTextureLayer (GLenum target, GLenum attachment, GLuint texture, GLint level, GLint layer);
 void * glMapBufferRange (GLenum target, GLintptr offset, GLsizeiptr length, GLbitfield access);
 void  glFlushMappedBufferRange (GLenum target, GLintptr offset, GLsizeiptr length);
 void  glBindVertexArray (GLuint array_);
 void  glDeleteVertexArrays (GLsizei n,GLuint *arrays);
 void  glGenVertexArrays (GLsizei n, GLuint *arrays);
 GLboolean  glIsVertexArray (GLuint array_);
 void  glDrawArraysInstanced (GLenum mode, GLint first, GLsizei count, GLsizei instancecount);
 void  glDrawElementsInstanced (GLenum mode, GLsizei count, GLenum type,void *indices, GLsizei instancecount);
 void  glTexBuffer (GLenum target, GLenum internalformat, GLuint buffer);
 void  glPrimitiveRestartIndex (GLuint index);
 void  glCopyBufferSubData (GLenum readTarget, GLenum writeTarget, GLintptr readOffset, GLintptr writeOffset, GLsizeiptr size);
 void  glGetUniformIndices (GLuint program_, GLsizei uniformCount,GLchar **uniformNames, GLuint *uniformIndices);
 void  glGetActiveUniformsiv (GLuint program_, GLsizei uniformCount,GLuint *uniformIndices, GLenum pname, GLint *params);
 void  glGetActiveUniformName (GLuint program_, GLuint uniformIndex, GLsizei bufSize, GLsizei *length, GLchar *uniformName);
 GLuint  glGetUniformBlockIndex (GLuint program_,GLchar *uniformBlockName);
 void  glGetActiveUniformBlockiv (GLuint program_, GLuint uniformBlockIndex, GLenum pname, GLint *params);
 void  glGetActiveUniformBlockName (GLuint program_, GLuint uniformBlockIndex, GLsizei bufSize, GLsizei *length, GLchar *uniformBlockName);
 void  glUniformBlockBinding (GLuint program_, GLuint uniformBlockIndex, GLuint uniformBlockBinding);
typedef struct __GLsync *GLsync;
 void  glDrawElementsBaseVertex (GLenum mode, GLsizei count, GLenum type,void *indices, GLint basevertex);
 void  glDrawRangeElementsBaseVertex (GLenum mode, GLuint start, GLuint end_, GLsizei count, GLenum type,void *indices, GLint basevertex);
 void  glDrawElementsInstancedBaseVertex (GLenum mode, GLsizei count, GLenum type,void *indices, GLsizei instancecount, GLint basevertex);
 void  glMultiDrawElementsBaseVertex (GLenum mode,GLsizei *count, GLenum type,void **indices, GLsizei drawcount,GLint *basevertex);
 void  glProvokingVertex (GLenum mode);
 GLsync  glFenceSync (GLenum condition, GLbitfield flags);
 GLboolean  glIsSync (GLsync sync);
 void  glDeleteSync (GLsync sync);